--- a/app/src/main/res/values/strings_non_localized.xml
+++ b/app/src/main/res/values/strings_non_localized.xml
@@ -15,8 +15,7 @@
   -->
 
 <resources>
-    <string name="app_name">All About Maps</string>
-    <string name="title_route_from_gpx">Draw route from GPX</string>
-    <string name="description_route_from_gpx">In this tutorial we will first parse the route points from a gpx file and then show the route with waypoints on map.</string>
-    <string name="not_implemented">Not implemented</string>
+    <string name="mapbox" translatable="false">mapbox</string>
+    <string name="google" translatable="false">google</string>
+    <string name="huawei" translatable="false">huawei</string>
 </resources>
