--- a/app/src/main/res/navigation/gpx_parser_nav_graph.xml
+++ b/app/src/main/res/navigation/gpx_parser_nav_graph.xml
@@ -16,20 +16,21 @@
 
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    app:startDestination="@+id/home">
+    app:startDestination="@+id/mapboxFragment">
+
 
     <fragment
-        android:id="@+id/home"
-        android:name="com.ulusoy.allaboutmaps.main.home.HomeFragment"
-        android:label="@string/app_name"
-        tools:layout="@layout/fragment_home">
-        <action
-            android:id="@+id/action_home_to_fragmentGpx"
-            app:destination="@id/fragmentGpx" />
+        android:id="@+id/mapboxFragment"
+        android:name="com.ulusoy.allaboutmaps.main.gpx.mapbox.GpxMapboxFragment"
+        android:label="MapboxFragment" >
     </fragment>
     <fragment
-        android:id="@+id/fragmentGpx"
-        android:name="com.ulusoy.allaboutmaps.main.gpx.GpxFragment"
-        android:label="@string/title_route_from_gpx" />
+        android:id="@+id/googleFragment"
+        android:name="com.ulusoy.allaboutmaps.main.gpx.google.GpxGoogleFragment"
+        android:label="GpxGoogleFragment" >
+    </fragment>
+    <fragment
+        android:id="@+id/huaweiFragment"
+        android:name="com.ulusoy.allaboutmaps.main.gpx.huawei.GpxHuaweiFragment"
+        android:label="GpxHuaweiFragment" />
 </navigation>
