--- a/app/src/main/res/layout/fragment_gpx_huawei.xml
+++ b/app/src/main/res/layout/fragment_gpx_huawei.xml
@@ -13,7 +13,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<com.huawei.hms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.ulusoy.allaboutmaps.main.ui.HuaweiMapView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mapView"
     android:layout_width="match_parent"
