--- a/app/src/main/res/menu/gpx_parser_menu.xml
+++ b/app/src/main/res/menu/gpx_parser_menu.xml
@@ -17,7 +17,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/mapboxFragment"
-        android:icon="@drawable/ic_mapbox_logo"
+        android:icon="@drawable/ic_mapbox_round_logo"
         android:title="@string/mapbox"
         android:contentDescription="@string/mapbox" />
     <item
