--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -46,5 +46,5 @@
     <fragment
         android:id="@+id/cameraBoundFragment"
         android:name="com.ulusoy.allaboutmaps.main.camerabound.CameraBoundFragment"
-        android:label="CameraBoundFragment" />
+        android:label="@string/title_move_camera_bound" />
 </navigation>
