--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -57,5 +57,5 @@
     <fragment
         android:id="@+id/gestureFragment"
         android:name="com.ulusoy.allaboutmaps.main.gesture.GestureFragment"
-        android:label="GestureFragment" />
+        android:label="Gestures" />
 </navigation>
